testdata/baselines/reference/submodule/conformance/parserForOfStatement2.errors.txt
error TS-1: Pre-emit (1) and post-emit (2) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
parserForOfStatement2.ts(1,9): error TS1123: Variable declaration list cannot be empty.


!!! error TS-1: Pre-emit (1) and post-emit (2) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
!!! related TS-1: The excess diagnostics are:
!!! related TS2304 parserForOfStatement2.ts:1:13: Cannot find name 'X'.
==== parserForOfStatement2.ts (1 errors) ====
    for (var of X) {
            
!!! error TS1123: Variable declaration list cannot be empty.
    }